[gd_scene load_steps=2 format=3 uid="uid://crsx4wa7qfy2d"]

[ext_resource type="Script" path="res://menu/settings.gd" id="1_22j3f"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_22j3f")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -116.0
offset_right = 192.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -108.0
offset_right = 184.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftVBox" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2

[node name="Resolution" type="Label" parent="Panel/HBoxContainer/LeftVBox"]
layout_mode = 2
text = "Resolution"

[node name="DisplayMode" type="Label" parent="Panel/HBoxContainer/LeftVBox"]
layout_mode = 2
text = "Display Mode"

[node name="Windowed" type="Label" parent="Panel/HBoxContainer/LeftVBox"]
layout_mode = 2
text = "Windowed"

[node name="Music" type="Label" parent="Panel/HBoxContainer/LeftVBox"]
layout_mode = 2
text = "Music"

[node name="Sfx" type="Label" parent="Panel/HBoxContainer/LeftVBox"]
layout_mode = 2
text = "Sfx
"

[node name="RightVBox" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResolutionOption" type="OptionButton" parent="Panel/HBoxContainer/RightVBox"]
layout_mode = 2
item_count = 3
popup/item_0/text = "1920 x 1080"
popup/item_0/id = 0
popup/item_1/text = "1280 x 720"
popup/item_1/id = 1
popup/item_2/text = "640 x 360"
popup/item_2/id = 2

[node name="DisplayModeOption" type="OptionButton" parent="Panel/HBoxContainer/RightVBox"]
layout_mode = 2
item_count = 5
popup/item_0/text = "Windowed"
popup/item_0/id = 0
popup/item_1/text = "Minimized"
popup/item_1/id = 1
popup/item_2/text = "Maximized"
popup/item_2/id = 2
popup/item_3/text = "Fullscreen"
popup/item_3/id = 3
popup/item_4/text = "Exclusive Fullscreen"
popup/item_4/id = 4

[node name="WindowedCheckBox" type="CheckBox" parent="Panel/HBoxContainer/RightVBox"]
layout_mode = 2

[node name="MusicHBox" type="HBoxContainer" parent="Panel/HBoxContainer/RightVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/RightVBox/MusicHBox"]
layout_mode = 2
text = "0"

[node name="MusicSlider" type="HSlider" parent="Panel/HBoxContainer/RightVBox/MusicHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
page = 5.0
tick_count = 10
ticks_on_borders = true

[node name="MusicValue" type="Label" parent="Panel/HBoxContainer/RightVBox/MusicHBox/MusicSlider"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -6.5
offset_right = 20.0
offset_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2
text = "Value"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Panel/HBoxContainer/RightVBox/MusicHBox"]
layout_mode = 2
text = "100"

[node name="SfxHBox" type="HBoxContainer" parent="Panel/HBoxContainer/RightVBox"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="Panel/HBoxContainer/RightVBox/SfxHBox"]
layout_mode = 2
text = "0"

[node name="SfxSlider" type="HSlider" parent="Panel/HBoxContainer/RightVBox/SfxHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
page = 5.0
tick_count = 10
ticks_on_borders = true

[node name="SfxValue" type="Label" parent="Panel/HBoxContainer/RightVBox/SfxHBox/SfxSlider"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -6.5
offset_right = 20.0
offset_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2
text = "Value"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Panel/HBoxContainer/RightVBox/SfxHBox"]
layout_mode = 2
text = "100"
